# DoteWM

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json
blog/: main.md
src/: CMakeLists.txt  windowmanager.proto
src/minimal/: CMakeLists.txt  app_browser_minimal.cc  client_minimal.cc  client_minimal.h  scheme_handler.cc  scheme_handler.h  scheme_strings.h
src/protobuf/: CMakeLists.txt  starting_send.h  windowmanager.pb.cc  windowmanager.pb.h
src/shared/: CMakeLists.txt  client_util.cc
src/window_manager/: CMakeLists.txt  main.cc  main.hpp
